ADD_SUBDIRECTORY(airport)
#Lee's own models
ADD_SUBDIRECTORY(air_traffic)
ADD_SUBDIRECTORY(simple_sim)
ADD_SUBDIRECTORY(ping_pong)
#

ADD_SUBDIRECTORY(disksim)
ADD_SUBDIRECTORY(olsr-c)
ADD_SUBDIRECTORY(olsr-j)
#ADD_SUBDIRECTORY(phold)
ADD_SUBDIRECTORY(pcs)
# ADD_SUBDIRECTORY(bittorrent)
# ADD_SUBDIRECTORY(tcp)
ADD_SUBDIRECTORY(raid)
ADD_SUBDIRECTORY(srw)
ADD_SUBDIRECTORY(torus)
ADD_SUBDIRECTORY(traffic)
ADD_SUBDIRECTORY(wifi)
